--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">Composition Game</string>
+    <string name="title_welcome">Composition number</string>
+    <string name="iv_brain_description">Logo</string>
+    <string name="rules"><b>Rules:</b> There will be figures front of you, two below and one above,
+        the two of them will contain numbers. It must that sum of numbers from two below
+        figures be equal above, you should put missing number for this. </string>
+    <string name="example"><b>Example: </b>Number 7 is in the above circle, below
+        circle has question mark, another one contains number 4.
+        So in this way there must be number 3 instead of question mark because 3 + 4 = 7</string>
+    <string name="begin_btn">Begin</string>
+    <string name="test_level">Test</string>
+    <string name="title_choice_level">Choice level</string>
+    <string name="level_easy">Easy</string>
+    <string name="level_medium">Medium</string>
+    <string name="level_hard">Hard</string>
+    <string name="answer_progress">Right answers percentage %s (minimum %s)</string>
+    <string name="game_over">Game over</string>
+    <string name="require_answers">Required amount of the right answers %s</string>
+    <string name="your_score">Your score: %s</string>
+    <string name="required_percentage_answers">Required percentage of right answers: %s</string>
+    <string name="percentage_right_answers">Percentage of right answers: %s</string>
+    <string name="start_again_btn">Start again</string>
 </resources>
